--- a/web/index.html
+++ b/web/index.html
@@ -19,20 +19,13 @@
 <h2>Documents</h2>
 <ul>
     <li><a href="file:///Users/david.gwartney/Desktop/sample-documents/secure-cab.pdf">secure-cab.pdf</a></li>
+    <li><a href="file:///Users/david.gwartney/Desktop/sample-documents/fbin-pto-policy.pdf">fbin-pto-policy.pdf</a></li>
 </ul>
 <h2>Presentations</h2>
 <ul>
     <li><a href="">Large Language Models &amp; GALE</a></li>
     <li>Two</li>
     <li>Three</li>
-</ul>
-<h2>Scripts</h2>
-<ul>
-    <li><a href="https://docs.google.com/document/d/1AiUO7eedCOUeTwqSfllSA5OUemirgFDlcckdH151cT8/edit">Equinix Unified Support</a></li>
-</ul>
-<h2>Videos</h2>
-<ul>
-    <li><a href="#">Agent Assist</a></li>
 </ul>
 
 <h2>Custom Built IVAs</h2>
@@ -46,10 +39,21 @@
 <h2>Pre-Built IVAs</h2>
 <ul>
     <li><a href="">HR</a></li>
-    <li><a href="">IT</a></li>
+    <li><a href="https://demo.kore.ai/demo/template/newsdk5/UI/index.php?botid=st-2cad42d3-d9db-59dd-b019-82f7e25d5dcc&id=881">IT Assist</a></li>
+    <li><a href="https://itassist.kore.ai/workbench">IT Assist Workbench</a></li>
+    <li><a href="https://demo.kore.ai/demo/template/newsdk5/UI/index.php?botid=st-493e509e-2222-5321-9960-310bd7836992&id=1105">Fortune Brands IT</a></li>
+</ul>
+<a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Bootstrap Documentation</a>
+</body>
+<h2>Scripts</h2>
+<ul>
+    <li><a href="https://docs.google.com/document/d/1AiUO7eedCOUeTwqSfllSA5OUemirgFDlcckdH151cT8/edit">Equinix Unified Support</a></li>
+    <li><a href="https://docs.google.com/document/d/1AiUO7eedCOUeTwqSfllSA5OUemirgFDlcckdH151cT8/edit">Fortune Brands</a></li>
+</ul>
+<h2>Videos</h2>
+<ul>
+    <li><a href="#">Agent Assist</a></li>
 </ul>
 </div>
 <script src="js/bootstrap.bundle.js"></script>
-<a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Bootstrap Documentation</a>
-</body>
 </html>
