--- a/web/index.html
+++ b/web/index.html
@@ -24,8 +24,6 @@
 <h2>Presentations</h2>
 <ul>
     <li><a href="">Large Language Models &amp; GALE</a></li>
-    <li>Two</li>
-    <li>Three</li>
 </ul>
 
 <h2>Custom Built IVAs</h2>
@@ -34,6 +32,7 @@
     <li><a href="https://bots.kore.ai/webclient/7f1e5868886f4c5dbde2dcc76434491df2a64f0267a54e009e1d25c956ab886cst45">Human Resources PTO Policy</a></li>
     <li><a href="#">Business Beacon</a></li>
     <li><a href="#">Employee OnBoarding</a></li>
+    <li><a href="https://searchassist.kore.ai/home/">Search-Assist Support Documents</a></li>
 </ul>
 
 <h2>Pre-Built IVAs</h2>
@@ -44,7 +43,6 @@
     <li><a href="https://demo.kore.ai/demo/template/newsdk5/UI/index.php?botid=st-493e509e-2222-5321-9960-310bd7836992&id=1105">Fortune Brands IT</a></li>
 </ul>
 <a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Bootstrap Documentation</a>
-</body>
 <h2>Scripts</h2>
 <ul>
     <li><a href="https://docs.google.com/document/d/1AiUO7eedCOUeTwqSfllSA5OUemirgFDlcckdH151cT8/edit">Equinix Unified Support</a></li>
@@ -53,7 +51,12 @@
 <h2>Videos</h2>
 <ul>
     <li><a href="#">Agent Assist</a></li>
+    <li><a href="#">Business Beacon</a></li>
+    <li><a href="#">On Boarding</a></li>
+    <li><a href="#">HR PTO Policy</a></li>
+    <li><a href="#">Answers From Documents</a></li>
 </ul>
 </div>
 <script src="js/bootstrap.bundle.js"></script>
+</body>
 </html>
