--- a/web/index.html
+++ b/web/index.html
@@ -18,36 +18,36 @@
 <div class="container">
 <h2>Documents</h2>
 <ul>
-    <li><a href="file:///Users/david.gwartney/Desktop/sample-documents/secure-cab.pdf">secure-cab.pdf</a></li>
-    <li><a href="file:///Users/david.gwartney/Desktop/sample-documents/fbin-pto-policy.pdf">fbin-pto-policy.pdf</a></li>
+    <li><a href="documents/secure-cab.pdf">secure-cab.pdf</a></li>
+    <li><a href="documents/fbin-pto-policy.pdf">fbin-pto-policy.pdf</a></li>
 </ul>
 <h2>Presentations</h2>
 <ul>
-    <li><a href="">Large Language Models &amp; GALE</a></li>
+    <li><a href="documents/introducing-gale.pdf">Introduction GALE</a></li>
 </ul>
 
 <h2>Custom Built IVAs</h2>
 <ul>
     <li><a href="https://bots.kore.ai/webclient/46e0e2c3d73e424b910eec438fb241d376325d7006f04393a8492e5f45d14463std2">Answers From Documents</a></li>
     <li><a href="https://bots.kore.ai/webclient/7f1e5868886f4c5dbde2dcc76434491df2a64f0267a54e009e1d25c956ab886cst45">Human Resources PTO Policy</a></li>
-    <li><a href="#">Business Beacon</a></li>
-    <li><a href="#">Employee OnBoarding</a></li>
+    <li><a href="https://bots.kore.ai/botbuilder">Business Beacon</a></li>
+    <li><a href="https://demo.kore.ai/demo/template/newsdk5/UI/index.php?botid=st-59e6355e-1ea8-5905-aa26-1d2b6cd2aa66&id=1181">Employee OnBoarding</a></li>
+    <li><a href="https://demo.kore.ai/demo/template/newsdk5/UI/index.php?botid=st-f9e7dd06-e94c-5ead-9e35-6af9668aa809&id=1182">Customer Portal</a></li>
     <li><a href="https://searchassist.kore.ai/home/">Search-Assist Support Documents</a></li>
 </ul>
 
-<h2>Pre-Built IVAs</h2>
+<h2>Employee Solutions</h2>
 <ul>
-    <li><a href="">HR</a></li>
+    <li><a href="https://demo.kore.ai/demo/template/newsdk8/UI/index.php?botid=st-7951fa07-5472-5ee1-9b33-6098d84c9c86&id=1085">HR</a></li>
     <li><a href="https://demo.kore.ai/demo/template/newsdk5/UI/index.php?botid=st-2cad42d3-d9db-59dd-b019-82f7e25d5dcc&id=881">IT Assist</a></li>
     <li><a href="https://itassist.kore.ai/workbench">IT Assist Workbench</a></li>
-    <li><a href="https://demo.kore.ai/demo/template/newsdk5/UI/index.php?botid=st-493e509e-2222-5321-9960-310bd7836992&id=1105">Fortune Brands IT</a></li>
 </ul>
-<a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Bootstrap Documentation</a>
 <h2>Scripts</h2>
 <ul>
     <li><a href="https://docs.google.com/document/d/1AiUO7eedCOUeTwqSfllSA5OUemirgFDlcckdH151cT8/edit">Equinix Unified Support</a></li>
-    <li><a href="https://docs.google.com/document/d/1AiUO7eedCOUeTwqSfllSA5OUemirgFDlcckdH151cT8/edit">Fortune Brands</a></li>
+    <li><a href="https://docs.google.com/document/d/1hPR2FPIxH0P3OmDp6Z3Wtp_xgimGkfbljY4lhw5Ea3E/edit">HR OnBoarding</a></li>
 </ul>
+    <!--
 <h2>Videos</h2>
 <ul>
     <li><a href="#">Agent Assist</a></li>
@@ -56,6 +56,7 @@
     <li><a href="#">HR PTO Policy</a></li>
     <li><a href="#">Answers From Documents</a></li>
 </ul>
+-->
 </div>
 <script src="js/bootstrap.bundle.js"></script>
 </body>
